# recipe-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  render.yaml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: db.py  main.py  parser.py  scaler.py  scraper.py  test_routes.py  test_scaler.py
frontend/: package-lock.json  package.json
frontend/src/: AddRecipe.jsx  App.jsx  EditRecipe.jsx  RecipeDetail.jsx  RecipeList.jsx  api.js  index.css
tests/: conftest.py  test_parser.py  test_routes.py  test_scaler.py  test_scraper.py
